syntax = "proto3";

package pb;

option go_package = "github.com/Kisanlink/aaa-service/pb";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}
